# smart-DOCS

./: README.md  main.ipynb  pyproject.toml
App/: auth.py  llm.py  main.py  retriever.py  utils.py
chroma_db/: chroma.sqlite3
chroma_db/025aa0e0-2029-4f46-9f74-83c099368bd1/: index_metadata.pickle
data/: animal_facts.txt  user1_data1.rtf  user1_india.txt  user2_Data2.rtf
rag-frontend/: package-lock.json  package.json
rag-frontend/src/: App.jsx
